--- a/src/main/resources/com/example/peluqueria_app_desk/view_registro.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_registro.fxml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.peluqueria_app_desk.RegistroController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="598.0" prefWidth="741.0" style="-fx-background-color: #272643;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.RegistroController">
+   <children>
+      <Label layoutX="189.0" layoutY="24.0" text="Formulario de Registro Empleados" textFill="#fcf9f9">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtNombreEm" layoutX="27.0" layoutY="111.0" prefHeight="25.0" prefWidth="226.0" />
+      <Label layoutX="27.0" layoutY="85.0" text="Ingrese su nombre:" textFill="#fcf8f8">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="27.0" layoutY="151.0" text="Ingrese su apellido:" textFill="#f5f0f0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtApellidoEm" layoutX="27.0" layoutY="181.0" prefHeight="25.0" prefWidth="226.0" />
+      <TextField fx:id="txtCorreoEm" layoutX="27.0" layoutY="246.0" prefHeight="25.0" prefWidth="226.0" />
+      <Label layoutX="27.0" layoutY="222.0" text="Email:" textFill="#f5f2f2">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="445.0" layoutY="89.0" text="Telefono:" textFill="#f8f4f4">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtTelEm" layoutX="445.0" layoutY="111.0" prefHeight="25.0" prefWidth="202.0" />
+      <TextField fx:id="txtDireccionEm" layoutX="446.0" layoutY="169.0" prefHeight="25.0" prefWidth="208.0" />
+      <Label layoutX="443.0" layoutY="145.0" text="Direccion:" textFill="#fff6f6">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="446.0" layoutY="210.0" text="Rol:" textFill="#f5f5f5">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtRolEm" layoutX="446.0" layoutY="234.0" prefHeight="25.0" prefWidth="220.0" />
+      <Separator layoutY="286.0" prefHeight="0.0" prefWidth="737.0" />
+      <Label layoutX="309.0" layoutY="296.0" text="Crear Usuario" textFill="#fffbfb">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="339.0" text="Nombre de Usuario:" textFill="#fffdfd">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtUsserEm" layoutX="179.0" layoutY="339.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="24.0" layoutY="386.0" text="Contraseña:" textFill="#f5f3f3">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtPassEm" layoutX="115.0" layoutY="386.0" prefHeight="25.0" prefWidth="187.0" />
+      <Label layoutX="34.0" layoutY="432.0" text="Confirmar contraseña:" textFill="#f5f2f2">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtPassEmCon" layoutX="196.0" layoutY="432.0" prefHeight="25.0" prefWidth="226.0" />
+      <Button fx:id="btnRegistrarse" layoutX="265.0" layoutY="492.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="208.0" style="-fx-background-color: #bae8e8; -fx-background-radius: 18 18 18 18;" text="Registrar" textFill="#251c1c">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
