--- a/src/main/resources/com/example/peluqueria_app_desk/view_gestion_de_horarios.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_gestion_de_horarios.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="561.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.GestionDeHorariosController">
+<AnchorPane onDragDetected="#guardarHorario" prefHeight="561.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.GestionDeHorariosController">
    <children>
       <TableView layoutX="17.0" layoutY="49.0" prefHeight="243.0" prefWidth="686.0">
         <columns>
