--- a/src/main/resources/com/example/peluqueria_app_desk/view_Gestion.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_Gestion.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="284.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.GestionController">
    <children>
       <Label fx:id="lblEmpleado" layoutX="54.0" layoutY="45.0" text="FORMULARIO DE GESTION" />
-      <Button fx:id="btnGestionarHorarios" layoutX="29.0" layoutY="90.0" mnemonicParsing="false" onAction="#gestionarHorarios" prefHeight="48.0" prefWidth="231.0" text="Gestionar horarios" focusTraversable="false"/>
-      <Button fx:id="btnGestionarReservas" layoutX="29.0" layoutY="166.0" mnemonicParsing="false" onAction="#gestionarReservas" prefHeight="48.0" prefWidth="231.0" text="Gestionar reservas" focusTraversable="false" />
-      <Button fx:id="btnHistorialReservas" layoutX="27.0" layoutY="241.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="231.0" text="Historial reservas" focusTraversable="false"/>
+      <Button fx:id="btnGestionarHorarios" focusTraversable="false" layoutX="29.0" layoutY="90.0" mnemonicParsing="false" onAction="#gestionarHorarios" prefHeight="48.0" prefWidth="231.0" text="Gestionar horarios" />
+      <Button fx:id="btnGestionarReservas" focusTraversable="false" layoutX="29.0" layoutY="166.0" mnemonicParsing="false" onAction="#gestionarReservas" prefHeight="48.0" prefWidth="231.0" text="Gestionar reservas" />
+      <Button fx:id="btnHistorialReservas" focusTraversable="false" layoutX="27.0" layoutY="241.0" mnemonicParsing="false" onAction="#HistorialReservas" prefHeight="48.0" prefWidth="231.0" text="Historial reservas" />
       <Button layoutX="146.0" layoutY="336.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="116.0" text="Atrás" />
    </children>
 </AnchorPane>
