--- a/src/main/resources/com/example/peluqueria_app_desk/view_historial_reservas.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_historial_reservas.fxml
@@ -1,66 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.AnchorPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="624.0" prefWidth="896.0" xmlns="http://javafx.com/javafx/22" fx:controller="com.example.peluqueria_app_desk.HistorialReservasController" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <Label prefHeight="60.0" text="Historial de Reserva" BorderPane.alignment="CENTER">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-   </top>
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <LineChart fx:id="grafTendencias" prefHeight="382.0" prefWidth="421.0">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-            </LineChart>
-            <TableView fx:id="tbViewRservas" prefHeight="200.0" prefWidth="200.0">
-              <columns>
-                <TableColumn fx:id="clFechaReserva" prefWidth="136.0" text="Fecha Reserva" />
-                <TableColumn fx:id="clHoraReserva" prefWidth="178.0" text="Hora Reserva" />
-                  <TableColumn fx:id="clEstadoReserva" prefWidth="156.0" text="Estado Reserva" />
-              </columns>
-            </TableView>
-         </children>
-         <padding>
-            <Insets top="20.0" />
-         </padding>
-      </VBox>
-   </center>
-   <right>
-      <VBox prefHeight="425.0" prefWidth="425.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Clientes Frecuentes">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-            <ListView fx:id="listClientesFrecuentes" prefHeight="220.0" prefWidth="200.0" />
-            <Label text="Horarios Demandados">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-            <ListView fx:id="listHorariosDemandados" prefHeight="220.0" prefWidth="200.0" />
-         </children>
-      </VBox>
-   </right>
-</BorderPane>
+<AnchorPane prefHeight="500.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.HistorialReservasController">
+   <children>
+      <TableView fx:id="tblReservas" layoutX="14.0" layoutY="38.0" prefHeight="432.0" prefWidth="644.0">
+        <columns>
+          <TableColumn fx:id="clidReserva" prefWidth="75.0" text="Reserva" />
+          <TableColumn fx:id="clCliente" prefWidth="75.0" text="Cliente" />
+            <TableColumn fx:id="clServicio" prefWidth="75.0" text="Servicio" />
+            <TableColumn fx:id="clFechaReserva" prefWidth="75.0" text="Fecha reserva" />
+            <TableColumn fx:id="clHoraReserva" prefWidth="75.0" text="Hora reserva" />
+            <TableColumn fx:id="clEmpleado" prefWidth="75.0" text="Empleado" />
+            <TableColumn fx:id="clEstadoReserva" prefWidth="75.0" text="Estado reserva" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </children>
+</AnchorPane>
