--- a/src/main/resources/com/example/peluqueria_app_desk/view_horarios.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_horarios.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -10,7 +13,7 @@
 
 <AnchorPane prefHeight="631.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.HorariosController">
    <children>
-      <TableView fx:id="tblHorarios" layoutX="38.0" layoutY="48.0" prefHeight="241.0" prefWidth="664.0">
+      <TableView fx:id="tblHorarios" layoutX="19.0" layoutY="75.0" prefHeight="241.0" prefWidth="699.0">
         <columns>
           <TableColumn fx:id="clidHorario" prefWidth="75.0" text="ID Horario" />
           <TableColumn fx:id="clidEmpleado" prefWidth="75.0" text="ID Empleado" />
@@ -22,15 +25,42 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="btnAgregar" layoutX="584.0" layoutY="341.0" mnemonicParsing="false" onAction="#agregarHorario" prefHeight="45.0" prefWidth="130.0" text="Agregar horarios" />
-      <Button fx:id="btnModificar" layoutX="589.0" layoutY="440.0" mnemonicParsing="false" onAction="#modificarHorario" prefHeight="45.0" prefWidth="130.0" text="Modificar horarios" />
-      <Button fx:id="btnEliminar" layoutX="592.0" layoutY="522.0" mnemonicParsing="false" onAction="#eliminarHorario" prefHeight="45.0" prefWidth="123.0" text="Eliminar horarios" />
-      <Label layoutX="109.0" layoutY="378.0" text="Seleccione dias de disponibilidad" />
-      <ListView fx:id="listViewDia" layoutX="111.0" layoutY="412.0" prefHeight="146.0" prefWidth="172.0" />
-      <Label layoutX="346.0" layoutY="378.0" text="Ingrese su hora de entrada" />
-      <Label layoutX="351.0" layoutY="485.0" text="Ingrese su hora de salida" />
-      <TextField fx:id="txtHoraInicio" layoutX="346.0" layoutY="428.0" prefHeight="25.0" prefWidth="206.0" promptText="HH:mm" />
-      <TextField fx:id="txtHoraFinal" layoutX="346.0" layoutY="522.0" prefHeight="25.0" prefWidth="206.0" promptText="HH:mm" />
-      <Label fx:id="lblNombreEmpleado" layoutX="36.0" layoutY="334.0" text="Empleado: " />
+      <Button fx:id="btnAgregar" layoutX="468.0" layoutY="373.0" mnemonicParsing="false" onAction="#clickAgregarHorario" prefHeight="45.0" prefWidth="130.0" text="Agregar horarios" />
+      <Button fx:id="btnModificar" layoutX="468.0" layoutY="441.0" mnemonicParsing="false" onAction="#clickModificarHorario" prefHeight="45.0" prefWidth="130.0" text="Modificar horarios" />
+      <Button fx:id="btnEliminar" layoutX="472.0" layoutY="523.0" mnemonicParsing="false" onAction="#clickEliminarHorario" prefHeight="45.0" prefWidth="123.0" text="Eliminar horarios" />
+      <Label layoutX="238.0" layoutY="373.0" text="Seleccione día de disponibilidad" />
+      <Label layoutX="244.0" layoutY="455.0" text="Seleccione su hora de entrada" />
+      <Label layoutX="249.0" layoutY="523.0" text="Seleccione su hora de salida" />
+      <MenuBar fx:id="menuBar" layoutY="2.0" prefHeight="25.0" prefWidth="740.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Inicio">
+            <items>
+              <MenuItem fx:id="menuItemInicio" mnemonicParsing="false" text="Inicio de sesión" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Gestionar reservas">
+            <items>
+              <MenuItem fx:id="menuItemGestionReservas" mnemonicParsing="false" text="Gestionar" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Historial reservas">
+            <items>
+              <MenuItem fx:id="menuItemHistorial" mnemonicParsing="false" text="Vizualizar" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Gestión">
+              <items>
+                <MenuItem fx:id="menuItemAtras" mnemonicParsing="false" text="Ir a gestión" />
+              </items>
+            </Menu>
+        </menus>
+      </MenuBar>
+      <ComboBox fx:id="cmbDiaSemana" layoutX="238.0" layoutY="406.0" prefHeight="25.0" prefWidth="215.0" />
+      <ComboBox fx:id="cmbHoraInicio" layoutX="238.0" layoutY="486.0" prefHeight="25.0" prefWidth="215.0" />
+      <ComboBox fx:id="cmbHoraFin" layoutX="238.0" layoutY="556.0" prefHeight="25.0" prefWidth="215.0" />
+      <TextField fx:id="txtIdHorario" layoutX="33.0" layoutY="406.0" />
+      <TextField fx:id="txtIdEmpleado" layoutX="33.0" layoutY="486.0" />
+      <Label layoutX="32.0" layoutY="373.0" text="ID Horario" />
+      <Label layoutX="33.0" layoutY="455.0" text="ID Empleado" />
    </children>
 </AnchorPane>
