--- a/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="316.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
+<AnchorPane prefHeight="437.0" prefWidth="308.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
    <children>
-      <PasswordField fx:id="txtPass" layoutX="52.0" layoutY="188.0" onAction="#initialize" prefHeight="25.0" prefWidth="210.0" focusTraversable="false" />
-      <TextField fx:id="txtCorreo" layoutX="52.0" layoutY="98.0" onAction="#initialize" prefHeight="25.0" prefWidth="210.0" focusTraversable="true" />
-      <Button fx:id="btnIngresar" layoutX="84.0" layoutY="257.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" text="Ingresar" />
-      <Label layoutX="52.0" layoutY="61.0" text="Ingrese el correo del empleado:" />
+
+      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="46.0" layoutY="105.0" onAction="#initialize" prefHeight="25.0" prefWidth="217.0" />
+      <Button fx:id="btnIngresar" layoutX="81.0" layoutY="271.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" text="Ingresar" />
+      <Label layoutX="53.0" layoutY="65.0" text="Ingrese el correo del empleado:" />
       <Label layoutX="52.0" layoutY="157.0" text="Ingrese la contraseña:" />
       <Label fx:id="lblMensaje" layoutX="70.0" layoutY="335.0" />
+      <CheckBox fx:id="ckbMostrarPass" layoutX="137.0" layoutY="229.0" mnemonicParsing="false" text="Mostrar contraseña" />
+      <StackPane layoutX="49.0" layoutY="183.0" prefHeight="36.0" prefWidth="217.0">
+         <children>
+            <TextField fx:id="txtPassVisible" />
+            <PasswordField fx:id="txtPass" prefHeight="25.0" prefWidth="230.0" />
+         </children>
+      </StackPane>
+      <Label layoutX="89.0" layoutY="24.0" text="INICIO DE SESIÓN" />
+
    </children>
 </AnchorPane>
