--- a/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
@@ -3,27 +3,54 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane prefHeight="437.0" prefWidth="308.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
+<AnchorPane prefHeight="437.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
    <children>
 
-      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="46.0" layoutY="105.0" onAction="#initialize" prefHeight="25.0" prefWidth="217.0" />
-      <Button fx:id="btnIngresar" layoutX="81.0" layoutY="271.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" text="Ingresar" />
-      <Label layoutX="53.0" layoutY="65.0" text="Ingrese el correo del empleado:" />
-      <Label layoutX="52.0" layoutY="157.0" text="Ingrese la contraseña:" />
+      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="229.0" layoutY="166.0" onAction="#initialize" prefHeight="25.0" prefWidth="236.0" />
+      <Button fx:id="btnIngresar" layoutX="264.0" layoutY="328.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" text="Ingresar" />
+      <Label layoutX="231.0" layoutY="127.0" text="Ingrese el correo del empleado:" />
+      <Label layoutX="235.0" layoutY="219.0" text="Ingrese la contraseña:" />
       <Label fx:id="lblMensaje" layoutX="70.0" layoutY="335.0" />
-      <CheckBox fx:id="ckbMostrarPass" layoutX="137.0" layoutY="229.0" mnemonicParsing="false" text="Mostrar contraseña" />
-      <StackPane layoutX="49.0" layoutY="183.0" prefHeight="36.0" prefWidth="217.0">
+      <CheckBox fx:id="ckbMostrarPass" layoutX="337.0" layoutY="285.0" mnemonicParsing="false" text="Mostrar contraseña" />
+      <StackPane layoutX="235.0" layoutY="243.0" prefHeight="36.0" prefWidth="236.0">
          <children>
-            <TextField fx:id="txtPassVisible" />
-            <PasswordField fx:id="txtPass" prefHeight="25.0" prefWidth="230.0" />
+            <TextField fx:id="txtPassVisible" prefHeight="25.0" prefWidth="308.0" />
+            <PasswordField fx:id="txtPass" prefHeight="25.0" prefWidth="236.0" />
          </children>
       </StackPane>
-      <Label layoutX="89.0" layoutY="24.0" text="INICIO DE SESIÓN" />
+      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="36.0" prefWidth="630.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Inicio">
+            <items>
+              <MenuItem fx:id="menuItemInicio" mnemonicParsing="false" text="Ir a inicio" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Gestionar horarios">
+            <items>
+              <MenuItem fx:id="menuItemGestionarHorarios" mnemonicParsing="false" text="Gestionar" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Gestionar reservas">
+            <items>
+              <MenuItem fx:id="menuItemGestionarReservas" mnemonicParsing="false" text="Gestionar" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Historial reservas">
+              <items>
+                <MenuItem fx:id="menuItemHistorial" mnemonicParsing="false" text="Visualizar" />
+              </items>
+            </Menu>
+        </menus>
+      </MenuBar>
+      <Label layoutX="299.0" layoutY="98.0" text="INICIO DE SESIÓN" />
 
    </children>
 </AnchorPane>
