--- a/src/main/resources/com/example/peluqueria_app_desk/view_historial_reservas.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_historial_reservas.fxml
@@ -7,23 +7,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="517.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.HistorialReservasController">
+<AnchorPane prefHeight="517.0" prefWidth="716.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.HistorialReservasController">
    <children>
-      <TableView fx:id="tblReservas" layoutX="7.0" layoutY="102.0" prefHeight="369.0" prefWidth="624.0">
-        <columns>
-          <TableColumn fx:id="clidReserva" prefWidth="75.0" text="Reserva" />
-          <TableColumn fx:id="clCliente" prefWidth="75.0" text="Cliente" />
-            <TableColumn fx:id="clServicio" prefWidth="75.0" text="Servicio" />
-            <TableColumn fx:id="clFechaReserva" prefWidth="75.0" text="Fecha reserva" />
-            <TableColumn fx:id="clHoraReserva" prefWidth="75.0" text="Hora reserva" />
-            <TableColumn fx:id="clEmpleado" prefWidth="75.0" text="Empleado" />
-            <TableColumn fx:id="clEstadoReserva" prefWidth="75.0" text="Estado reserva" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="25.0" prefWidth="633.0">
+      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="36.0" prefWidth="723.0">
         <menus>
           <Menu mnemonicParsing="false" text="Inicio">
             <items>
@@ -47,5 +33,20 @@
             </Menu>
         </menus>
       </MenuBar>
+      <TableView fx:id="tblHistorial" layoutX="10.0" layoutY="59.0" prefHeight="200.0" prefWidth="697.0">
+        <columns>
+          <TableColumn fx:id="clidHistorial" prefWidth="75.0" text="ID Historial" />
+          <TableColumn fx:id="clidReserva" prefWidth="75.0" text="ID Reserva" />
+            <TableColumn fx:id="clCliente" prefWidth="75.0" text="Cliente" />
+            <TableColumn fx:id="clEmpleado" prefWidth="75.0" text="Empleado" />
+            <TableColumn fx:id="clServicio" prefWidth="75.0" text="Servicio" />
+            <TableColumn fx:id="clFechaReserva" prefWidth="75.0" text="Fecha" />
+            <TableColumn fx:id="clHoraReserva" prefWidth="75.0" text="Hora" />
+            <TableColumn fx:id="clEstadoReserva" prefWidth="75.0" text="Estado " />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
