--- a/src/main/resources/com/example/peluqueria_app_desk/view_historial_reservas.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_historial_reservas.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -7,9 +8,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="517.0" prefWidth="716.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.HistorialReservasController">
+<AnchorPane prefHeight="551.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.HistorialReservasController">
    <children>
-      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="36.0" prefWidth="723.0">
+      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="36.0" prefWidth="779.0">
         <menus>
           <Menu mnemonicParsing="false" text="Inicio">
             <items>
@@ -33,20 +34,39 @@
             </Menu>
         </menus>
       </MenuBar>
-      <TableView fx:id="tblHistorial" layoutX="10.0" layoutY="59.0" prefHeight="200.0" prefWidth="697.0">
+      <TableView fx:id="tblClientesFrecuentes" layoutX="14.0" layoutY="102.0" prefHeight="174.0" prefWidth="369.0">
         <columns>
-          <TableColumn fx:id="clidHistorial" prefWidth="75.0" text="ID Historial" />
-          <TableColumn fx:id="clidReserva" prefWidth="75.0" text="ID Reserva" />
-            <TableColumn fx:id="clCliente" prefWidth="75.0" text="Cliente" />
-            <TableColumn fx:id="clEmpleado" prefWidth="75.0" text="Empleado" />
-            <TableColumn fx:id="clServicio" prefWidth="75.0" text="Servicio" />
-            <TableColumn fx:id="clFechaReserva" prefWidth="75.0" text="Fecha" />
-            <TableColumn fx:id="clHoraReserva" prefWidth="75.0" text="Hora" />
-            <TableColumn fx:id="clEstadoReserva" prefWidth="75.0" text="Estado " />
+          <TableColumn fx:id="clidCliente" prefWidth="75.0" text="ID Cliente" />
+          <TableColumn fx:id="clNombreCliente" prefWidth="75.0" text="Nombre cliente" />
+            <TableColumn fx:id="clTotalReservas" prefWidth="75.0" text="Total reservas" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
+      <TableView fx:id="tblReservasPorEmpleado" layoutX="402.0" layoutY="102.0" prefHeight="174.0" prefWidth="369.0">
+        <columns>
+          <TableColumn fx:id="clidEmpleado" prefWidth="75.0" text="ID Empleado" />
+          <TableColumn fx:id="clNombreEmpleado" prefWidth="75.0" text="Nombre empleado" />
+            <TableColumn fx:id="clTotalReservasEmpleados" prefWidth="75.0" text="Total reservas" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <TableView fx:id="tblHorariosDemandados" layoutX="14.0" layoutY="349.0" prefHeight="174.0" prefWidth="450.0">
+        <columns>
+          <TableColumn fx:id="clidHora" prefWidth="75.0" text="ID Horario" />
+          <TableColumn fx:id="clHoraReserva" prefWidth="160.0" text="Hora reserva" />
+            <TableColumn fx:id="clTotalReservasHorarios" prefWidth="224.0" text="Total reservas horarios" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Label layoutX="342.0" layoutY="51.0" text="HISTORIAL DE RESERVAS" />
+      <Label layoutX="92.0" layoutY="75.0" text="CLIENTES FRECUENTES" />
+      <Label layoutX="128.0" layoutY="307.0" text="HORARIOS MÁS DEMANDADOS" />
+      <Label layoutX="506.0" layoutY="75.0" text="RESERVAS POR EMPLEADO" />
    </children>
 </AnchorPane>
