--- a/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
+++ b/src/main/resources/com/example/peluqueria_app_desk/view_login.fxml
@@ -8,25 +8,36 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="375.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
+<AnchorPane prefHeight="490.0" prefWidth="419.0" style="-fx-background-color: #D8BFD8;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.peluqueria_app_desk.LoginController">
    <children>
 
-      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="89.0" layoutY="143.0" onAction="#initialize" prefHeight="25.0" prefWidth="236.0" />
-      <Button fx:id="btnIngresar" layoutX="132.0" layoutY="303.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" text="Ingresar" />
-      <Label layoutX="89.0" layoutY="112.0" text="Ingrese el correo del empleado:" />
-      <Label layoutX="89.0" layoutY="190.0" text="Ingrese la contraseña:" />
+      <TextField fx:id="txtCorreo" focusTraversable="true" layoutX="29.0" layoutY="226.0" onAction="#initialize" prefHeight="34.0" prefWidth="361.0" style="-fx-background-color: #B0E0E6; -fx-border-color: #FFDAB9;">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></TextField>
+      <Button fx:id="btnIngresar" layoutX="138.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="49.0" prefWidth="147.0" style="-fx-background-color: #FF69B4; -fx-border-style: #FFDAB9;" text="Ingresar" textAlignment="CENTER">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Button>
+      <Label layoutX="30.0" layoutY="195.0" text="Ingrese el correo del empleado:" />
+      <Label layoutX="30.0" layoutY="283.0" text="Ingrese la contraseña:" />
       <Label fx:id="lblMensaje" layoutX="70.0" layoutY="335.0" />
-      <CheckBox fx:id="ckbMostrarPass" layoutX="205.0" layoutY="265.0" mnemonicParsing="false" text="Mostrar contraseña" />
-      <StackPane layoutX="89.0" layoutY="219.0" prefHeight="36.0" prefWidth="236.0">
+      <CheckBox fx:id="ckbMostrarPass" layoutX="212.0" layoutY="352.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="168.0" style="-fx-font: #4B4B4B;" text="Mostrar contraseña">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font></CheckBox>
+      <StackPane layoutX="29.0" layoutY="310.0" prefHeight="34.0" prefWidth="361.0" style="-fx-background-color: #B0E0E6;">
          <children>
-            <TextField fx:id="txtPassVisible" prefHeight="25.0" prefWidth="236.0" />
-            <PasswordField fx:id="txtPass" prefHeight="25.0" prefWidth="236.0" />
+            <TextField fx:id="txtPassVisible" prefHeight="25.0" prefWidth="236.0" style="-fx-background-color: #B0E0E6;" />
+            <PasswordField fx:id="txtPass" prefHeight="12.0" prefWidth="351.0" style="-fx-background-color: #B0E0E6; -fx-border-color: #FFDAB9;" />
          </children>
       </StackPane>
-      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="43.0" prefWidth="404.0">
+      <MenuBar fx:id="menuBar" layoutX="-1.0" layoutY="2.0" prefHeight="43.0" prefWidth="419.0" style="-fx-background-color: #FAF3DD;">
         <menus>
           <Menu mnemonicParsing="false" text="Inicio">
             <items>
@@ -50,7 +61,8 @@
             </Menu>
         </menus>
       </MenuBar>
-      <Label layoutX="145.0" layoutY="76.0" text="INICIO DE SESIÓN" />
+      <Label layoutX="160.0" layoutY="62.0" text="INICIO DE SESIÓN" />
+      <ImageView fx:id="imgLogin" fitHeight="103.0" fitWidth="124.0" layoutX="150.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true" />
 
    </children>
 </AnchorPane>
